--- a/src/Windows/Windows.csproj
+++ b/src/Windows/Windows.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Notadesigner.Binaca</RootNamespace>
+    <AssemblyName>Binaca</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
